Salesforce/src/objects/Facebook_Connection_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Contains settings for connection to Facebook for implementing the integration interface for photo and post</description>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Provider_Id__c</fullName>
        <label>Auth Provider Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Provider_Name__c</fullName>
        <label>Auth Provider Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Social_Posting__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable Social Posting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Domain__c</fullName>
        <label>My Domain</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_ID__c</fullName>
        <label>Permission Set ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_ID__c</fullName>
        <label>Photo ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Facebook Connection Settings</label>
</CustomObject>